--- a/contact.html
+++ b/contact.html
@@ -9,42 +9,61 @@ Purpose: Contact web page with mobile first design
         <title>Contact</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/main.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!--<link href="css/main.css" rel="stylesheet">-->
         <link rel="icon" href="favicon.ico" type="image/ico">
     </head>
     <body>
-        <div class="nav">
-            <a href="index.html">Home</a>
-        </div>
-        <div class="form-container">
-            <div id="msg">
-                <!-- This is a blank area to talk with user -->
-                <br>
-            </div>
-            <div id="form-div">
-                <form id="contact-data" name="emailForm" role="form" accept-charset="utf-8">
-                    <div class="form-input">
-                        <input name="name" type="text" id="name"  placeholder="Your Name" maxlength="64">
-                    </div>
-                    <div class="form-input">
-                        <input type="text" id="remail1" name="remail1" placeholder="Return Email" maxlength="64" >
-                    </div>
-                    <div class="form-input">
-                        <input type="text" id="remail2" name="remail2" placeholder="Re-enter Return Email" maxlength="64" >
-                    </div>
-                    <div class="form-input">
-                        <input type="text" id="subject" name="subject" placeholder="Subject" maxlength="64" >
-                    </div>
-                    <div class="form-input">
-                        <textarea  id="message" name="message" placeholder="Your Message" columns="50" rows="10" maxlength="1000" ></textarea>
-                    </div>
-                    <div class="form-input">
-                        <button class="button" type="button" id="send">Send</button>
-                        <button class="button" type="button" id="clear">Clear</button>
-                    </div>
-                </form>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto"></ul>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://en.wikipedia.org/wiki/Austin%2C_Texas#History" class="nav-item nav-link">Austin</a>
+                </li>
+                </ul>
             </div>
         </div>
+    </nav>
+        <div class="container">
+            <div class="row">
+                <div id="msg">
+                    <!-- This is a blank area to talk with user -->
+                    <br>
+                </div>
+                <div id="form-div">
+                    <form id="contact-data" name="emailForm" role="form" accept-charset="utf-8">
+                        <div class="form-input">
+                            <input name="name" type="text" id="name"  placeholder="Your Name" maxlength="64" value="Casey">
+                        </div>
+                        <div class="form-input">
+                            <input type="text" id="remail1" name="remail1" placeholder="Return Email" maxlength="64" value="c@m.com">
+                        </div>
+                        <div class="form-input">
+                            <input type="text" id="remail2" name="remail2" placeholder="Re-enter Return Email" maxlength="64" value="c@m.com" >
+                        </div>
+                        <div class="form-input">
+                            <input type="text" id="subject" name="subject" placeholder="Subject" maxlength="64" value="test">
+                        </div>
+                        <div class="form-input">
+                            <textarea  id="message" name="message" placeholder="Your Message" columns="50" rows="10" maxlength="1000" >test message</textarea>
+                        </div>
+                        <div class="form-input">
+                            <button type="button" class="btn btn-primary" id="send">Send</button>
+                            <button type="button" class="btn btn-primary" id="clear">Clear</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     </body>
 </html>
