--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@ Purpose: Gallery web page with mobile first design using bootstrap
     <link rel="shortcut icon" href="favicon.ico" type="image/ico">
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-info">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,6 +26,9 @@ Purpose: Gallery web page with mobile first design using bootstrap
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                </li>
+                <li class="nav-item active">
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 </li>
                 <li class="nav-item">
