--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@ Purpose: Index web page with mobile first design
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!--<link href="css/main.css" rel="stylesheet"> -->
+        <link href="css/main.css" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/ico">
     </head>
     <body>
-       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+       <nav class="navbar navbar-expand-md navbar-dark bg-info">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav mr-auto"></ul>
+                            <li class="nav-item active">
+                                <a href="index.html" class="nav-item nav-link active">Home</a>
+                            </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a href="https://en.wikipedia.org/wiki/Austin%2C_Texas#History" class="nav-item nav-link">Austin</a>
