--- a/gallery.html
+++ b/gallery.html
@@ -42,39 +42,39 @@ Purpose: Gallery web page with mobile first design using bootstrap
     <div class="row">
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/1.jpg" class="gal-image">
+            <img src="images/1.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/2.jpg" class="gal-image">
+            <img src="images/2.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/3.jpg" class="gal-image">
+            <img src="images/3.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/4.jpg" class="gal-image">
+            <img src="images/4.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/5.jpg" class="gal-image">
+            <img src="images/5.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/6.jpg" class="gal-image">
+            <img src="images/6.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/7.jpg" class="gal-image">
+            <img src="images/7.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/8.jpg" class="gal-image">
+            <img src="images/8.jpg" class="img-fluid">
         </div>
 
         <div class="col-xs-12 col-md-4">
-            <img src="images/9.jpg" class="gal-image">
+            <img src="images/9.jpg" class="img-fluid">
         </div>
 
     </div>
